--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Triangles</title>
 </head>
 <body>
-    <h1><a>GitHub Repo</a></h1>
+    <h1><a href="https://github.com/veereshbv04/Learn_Triangles">GitHub Repo</a></h1>
     <div class="container">
         <h2>What you want to do ?</h2>
         <a ><div class="container-div"><h1>Angles of Triangle ?</h1></div></a>
@@ -19,8 +19,8 @@
     </div>
 
     <footer>
-        <h2>Veeresh B V</h2>
-        <h3>linkedin</h3>
+        <h2 style="font-weight: bold;">Veeresh B V</h2>
+        <h3><a href="https://www.linkedin.com/in/veereshbv04/">Linkedin</a></h3>
     </footer>
     
 </body>
