--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1><a href="https://github.com/veereshbv04/Learn_Triangles">GitHub Repo</a></h1>
     <div class="container">
         <h2>What you want to do ?</h2>
-        <a ><div class="container-div"><h1>Angles of Triangle ?</h1></div></a>
+        <a href="is_triangle.html"><div class="container-div"><h1>Angles of Triangle ?</h1></div></a>
         <a><div class="container-div"><h1>Check Hypotenuse</h1></div></a>
         <a><div class="container-div"><h1>Calculate Area</h1></div></a>
         <a><div class="container-div"><h1>Take Quiz</h1></div></a>
