feat:html for hypotenuse

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h2>What you want to do ?</h2>
         <a href="is_triangle.html"><div class="container-div"><h1>Angles of Triangle ?</h1></div></a>
-        <a><div class="container-div"><h1>Check Hypotenuse</h1></div></a>
+        <a href="/hypotenuse.html"><div class="container-div"><h1>Check Hypotenuse</h1></div></a>
         <a><div class="container-div"><h1>Calculate Area</h1></div></a>
         <a><div class="container-div"><h1>Take Quiz</h1></div></a>
        
