feat:length of hypotensue is done

--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -15,7 +15,6 @@
        <form>
         <input type="number" class="angle-input" placeholder="angle 1"/>
         <input type="number"  class="angle-input" placeholder="angle 2"/>
-        <input type="number"  class="angle-input" placeholder="angle 3"/>
         <div class="output-div"></div>
        </form>
        <button class="submit-button">Submit</button>
@@ -30,6 +29,6 @@
         <h3><a href="https://www.linkedin.com/in/veereshbv04/">Linkedin</a></h3>
     </footer>
 
-    <script src="is_triangle.js"></script>
+    <script src="/hypotenuse.js"></script>
     
 </body>
