--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="is_triangle.html"><div class="container-div"><h1>Angles of Triangle ?</h1></div></a>
         <a href="/hypotenuse.html"><div class="container-div"><h1>Check Hypotenuse</h1></div></a>
         <a href="/calculate_area.html"><div class="container-div"><h1>Calculate Area</h1></div></a>
-        <a><div class="container-div"><h1>Take Quiz</h1></div></a>
+        <a href="/quiz.html"><div class="container-div"><h1>Take Quiz</h1></div></a>
        
     </div>
 
