feat:quiz working properly

--- a/quiz.html
+++ b/quiz.html
@@ -16,15 +16,15 @@
        <form class="quiz-form">
         <div class="question-div">
             <p> If a triangle has angles 1350, 150, 300. Is it an obtuse triangle?</p>
-            <label><input type="radio" name = question1/>Yes</label>
-            <label><input type="radio" name = question1/>No</label>
+            <label><input type="radio" name = question1 value="Yes"/>Yes</label>
+            <label><input type="radio" name = question1 value="No"/>No</label>
           
         </div>
 
         <div class="question-div">
             <p> If a triangle has angles 1350, 150, 300. Is it an obtuse triangle?</p>
-            <label><input type="radio" name = question1/>Yes</label>
-            <label><input type="radio" name = question1/>No</label>
+            <label><input type="radio" name = question2 value="Yes"/>Yes</label>
+            <label><input type="radio" name = question2 value="No"/>No</label>
         </div>
         
        </form>
