--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>Triangles</title>
 </head>
 <body>
-    <h1><a href="https://github.com/veereshbv04/Learn_Triangles">GitHub Repo</a></h1>
+    <h1><a href="https://github.com/veereshbv04/Fun_With_Triangles">GitHub Repo</a></h1>
+    
     <div class="container">
+        <h1>Let's have sum fun with Triangles</h1>
         <h2>What you want to do ?</h2>
-        <a href="is_triangle.html"><div class="container-div"><h1>Angles of Triangle ?</h1></div></a>
+        <a href="is_triangle.html"><div class="container-div"><h1>Angles of Triangle</h1></div></a>
         <a href="/hypotenuse.html"><div class="container-div"><h1>Check Hypotenuse</h1></div></a>
         <a href="/calculate_area.html"><div class="container-div"><h1>Calculate Area</h1></div></a>
         <a href="/quiz.html"><div class="container-div"><h1>Take Quiz</h1></div></a>
