--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <footer>
-        <h2 style="font-weight: bold;">Veeresh B V</h2>
+        <h2 style="font-size: 2em; font-weight: bolder; color:purple;">Veeresh B V</h2>
         <h3><a href="https://www.linkedin.com/in/veereshbv04/">Linkedin</a></h3>
     </footer>
     
