more questions added

--- a/quiz.html
+++ b/quiz.html
@@ -28,6 +28,7 @@
             <label><input type="radio" name = question2 value="4"/>4</label>
         </div>
 
+
         <div class="question-div">
             <p> What is the sum of all internal angles of a Triangle ?</p>
             <label><input type="radio" name = question3 value="180"/>180</label>
@@ -46,6 +47,21 @@
             <label><input type="radio" name = question5 value="True"/>True</label>
             <label><input type="radio" name = question5 value="False"/>False</label>
         </div>
+
+        
+        <div class="question-div">
+            <p>Triangles are always similar</p>
+            <label><input type="radio" name = question6 value="True"/>True</label>
+            <label><input type="radio" name = question6 value="False"/>False</label>
+        </div>
+
+        <div class="question-div">
+            <p>Pythogoras theorem can be applied to any triangles</p>
+            <label><input type="radio" name = question7 value="True"/>True</label>
+            <label><input type="radio" name = question7 value="False"/>False</label>
+        </div>
+
+
 
         
 
